# mapie_llm

./: .gitignore  MAPIE_for_cosmosqa.ipynb  MAPIE_for_cosmosqa_correction.ipynb  README.md  make_exercice.sh  nohup.out  pyproject.toml
utils/: cosmosqa.py  prompt_utils.py
