[tool.poetry]
name = "mapie-llm"
version = "0.1.0"
description = ""
authors = ["vblot28 <vincent.blot@capgemini.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "4.50.0"
jupyter = "^1.1.1"
nbconvert = "^7.16.6"
ipykernel = "^6.29.5"
torch = "^2.6.0"
accelerate = "0.26.0"
fbgemm-gpu = "^1.1.0"
tqdm = "^4.67.1"
scikit-learn = "1.5.2"
numpy = "^2.2.4"
mapie = "^0.9.2"
protobuf = "^6.30.1"
sentencepiece = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
