[project]
name = "mapie-llm"
version = "0.1.0"
description = ""
authors = [
        {name="Vincent Blot", email="vincent.blot@capgemini.com"},
        {name="Valentin Laurent", email="valentin.laurent@capgemini.com"},
        {name="Grégoire Martinon", email="gregoire.martinon@capgemini.com"},
]
readme = "README.md"

requires-python = ">=3.13"
dependencies = [
    "ipywidgets>=8.1.7",
    "mapie>=1.0.1",
    "matplotlib>=3.10.3",
    "notebook>=7.4.2",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.52.3",
]
